--- a/css/index-c.css
+++ b/css/index-c.css
@@ -33,10 +33,13 @@ section {
 .m-container div{
     padding: 0;
 }
-.m-container button, .bdr button{
+.m-container input, .bdr input{
     border: none;
     width: 100%;
     height: 52px;
     padding: 0;
     background: #f8f9fa;
+}
+input{
+    text-align: center;
 }
